--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.8",
     "sweetalert2": "^11.10.7",
-    "vite-plugin-svgr": "^3.2.0"
+    "vite-plugin-svgr": "^3.2.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@swc/cli": "^0.1.62",
