--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "formik": "^2.4.5",
+    "framer-motion": "^11.0.24",
     "modern-normalize": "^2.0.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
