--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
+    "react-tiny-popover": "^8.0.4",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.8",
     "sweetalert2": "^11.10.7",
